--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "langchain-openai>=0.3.28",
     "langchain-core>=0.3.72",
     "python-dotenv>=1.1.1",
+    "langchain-google-genai>=2.1.9",
 ]
 
 [dependency-groups]
